Prevent navbar from wrapping when collapsed

--- a/NewsSite/wwwroot/css/site.css
+++ b/NewsSite/wwwroot/css/site.css
@@ -70,6 +70,11 @@ body {
                 display: none;
             }
 }
+
+.navbar.navbar-expand-lg {
+    flex-wrap: nowrap;
+}
+
 .navbar-utilities {
     min-width: 0;
     flex-wrap: nowrap;
